k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  labels:
    app: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: 543816070942.dkr.ecr.us-east-1.amazonaws.com/shubham_argocd_todo_react:0692d0ab1021034b04aa158435a33e7744ec7db3
          ports:
            - containerPort: 80
