k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  type: LoadBalancer
  selector:
    app: todo-frontend
  ports:
    - port: 80
      targetPort: 80
